src/app/public/create-suitcase/create-suitcase.component.scss
@import "./../../../scss/variables";
@import "./../../../scss/theme";

$weather-size: 300px;
$actions-size: 25px;
$margin: 15px;

.row {
  margin-bottom: 20px;
}

.full-screen {
  height: calc(100% - #{$max-footer-height} - #{$min-header-height});
}

.columns-row {
  height: 70%;

  .suggestion-column {
    order: 1;
    height: fit-content;

    .suggestion-card-body {
      max-height: 450px;
      overflow-y: scroll;
    }
  }

  .suitcase-column {
    order: 2;

    .card-body {
      max-height: 450px;
      overflow-y: scroll;
    }
  }

  .weather-column {
    order: 3;
  }
}

// WEATHER
.weather-column {
  height: fit-content;

  .weather-header {
    width: calc(100% + 32px);
    margin-left: -16px;
    margin-top: -8px;
    margin-bottom: -8px;
    height: 40px;
    padding: 8px 16px;
  }

  .weather-body {
    height: 250px;
    margin-top: 8px;
  }
}

.weather-panel-wrapper {
  border: solid 1px black;
  box-shadow: inset 0 0 10px $black;
  display: inline-block;
  max-height: $weather-size;
  padding: 8px 16px;
  width: 100%;
  overflow: hidden;
  background: white;
}





#selection-categories-wrapper {
  position: absolute;
  bottom: 5px;
  right: 200px;
  display: flex;
  width: 200px;
  overflow: hidden;
  justify-content: space-between;

  .selection-icon {
    border: solid 1px;
    border-radius: 5px;
    width: 26px;
    cursor: pointer;
    color: $secondary-color;
  }
}

.form, .form-field {
  width: 100%;
}

#new-item-field {
  border-radius: 5px;
}

.item {
  align-items: center;
  color: $tertiary-color;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  min-height: 50px;
  padding: 10px 20px;
}

.item-name {
  max-width: calc(100% - 30px - 10px);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.item-attributes {
  margin-left: 10px;
  width: 130px;
  display: flex;
}

.item-data {
  width: calc(100% - #{$actions-size} - #{$actions-size} - #{$margin});
}

.item-actions {
  display: none;
  margin-left: $margin;
  width: calc(#{$actions-size} + #{$actions-size});
}

.card-header {
  border-radius: 0!important;
  align-items: center;
  background: $tertiary-color;
  color: white;
  display: flex;

  mat-icon {
    margin-right: 5px;
  }
}

.card-subheader {
  background: map_get($mat-suitcase-secondary, 300);
  color: white;
}

.card-subsubheader {
  background: map_get($mat-suitcase-secondary, 100);
  color: white;
}

.card-body {
  padding: 0;
  transition: box-shadow .3s;
  &:hover {
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    .item-data {
      text-overflow: ellipsis;
      overflow: hidden;
    }
    .item-actions {
      display: flex;
      align-items: center;
    }
  }
}

.common-card-body:nth-child(even) .card-body .item {
  background: $white;
}

@keyframes disappearTop {
  0%{
    opacity: 1;
    height: 50px;
    transform: rotateX(90deg);
  }
  50%{
    opacity: 0.5;
    height: 25px;
    transform: rotateX(0deg);
  }
  100%{
    display: none;
    opacity: 0;
    height: 0px;
    transform: rotateX(90deg);
  }
}

.removedItem {
  animation-name: disappearTop;
  animation-duration: 500ms;
  animation-timing-function: linear;
}

.suitcase-card {
  .item {
    max-height: 50px;
    box-sizing: border-box;
  }

  .item-data {
    display: flex;
    align-items: center;
    height: 30px;
    width: calc(100% - #{$actions-size} - #{$margin});

    .mat-mdc-form-field-infix {
      padding-top: 4px!important;
    }

    .mat-mdc-form-field-subscript-wrapper {
      display: none;
    }

    .item-name {
      width: 50%;
      overflow: hidden;
    }

    .mat-input-element.item-quantity {
      max-width: 40px;
      text-align: center;
      padding: 2px;
      border: 1px solid $tertiary-color;
      border-radius: 5px;
      background-color: map_get($mat-suitcase-secondary, 300);
      margin-left: 10px;
      color: white;
    }
  }
}

// PRINT MODE
.print-mode {
  .col-lg-3:not(.suitcase-column), .form, #save-icon, #print-icon, .item-actions, #navbarSupportedContent, .navbar-toggler, .footer {
    display: none;
  }
  .suitcase-column {
    max-width: 100%;
    flex: 0 0 50%;
    margin: auto;

    .item-data {
      justify-content: space-between;
    }
  }
}

// ICONS
#add-icon {
  width: 30px;
  height: 30px;
  font-size: 30px;
}

#save-icon, #print-icon {
  width: 50px;
  height: 50px;
  font-size: 30px;
  position: absolute;
  top: -25px;
  right: -25px;
  background: $secondary-color;
  color: white;
  border-radius: 50px;
  cursor: pointer;
  padding: 10px;

  &.disabled {
    background-color: lightgrey;
    cursor: none;
  }
}

#print-icon {
  top: 30px;
}

#selection-categories-wrapper .selection-icon.selectable {
  color: $primary-color;
}

#selection-categories-wrapper .selection-icon.selected {
  color: $secondary-color;
}

// KEYFRAMES
@-webkit-keyframes flip-out-ver-right{0%{-webkit-transform:rotateY(0);transform:rotateY(0);opacity:1}100%{-webkit-transform:rotateY(70deg);transform:rotateY(70deg);opacity:0}}@keyframes flip-out-ver-right{0%{-webkit-transform:rotateY(0);transform:rotateY(0);opacity:1}100%{-webkit-transform:rotateY(70deg);transform:rotateY(70deg);opacity:0}}
.flip-out-ver-right{-webkit-animation:flip-out-ver-right .5s ease-in-out forwards;animation:flip-out-ver-right .5s ease-in-out forwards}


.expand .unexpand {
  -webkit-transition: transform 1.4s; /* Safari */
  transition: transform 1.4s;
}

// MEDIAQUERYS
@media (max-width: 992px){
  .row {
    margin-bottom: 0px;
  }

  .columns-row {
    padding: 0 20px;

    .suggestion-column {
      margin-bottom: 30px;
      border-radius: 10px;
      padding-right: 30px;
      overflow: hidden;

      .suggestion-body {
        max-height: 250px;
        overflow-y: scroll;
      }
    }

    .suitcase-column {
      order: 3;
      padding-right: 30px;
      padding-bottom: 20px;
      max-height: 60%;
  
      .card-body {
        max-height: 225px;
        overflow-y: scroll;
      }
    }

    .weather-column {
      order: 2;
      margin-bottom: 30px;

      .weather-body {
        max-height: 250px;
      }
    }
  }
}

@media (max-width: 768px){

}

@media (max-width: 576px){

  .container {
    height: auto;
  }

  .columns-row {
    padding: 0 20px;
  }

  #new-item-field {
    min-height: 135px;

    #selection-categories-wrapper {
      bottom: -40px;
      left: 0;
    }
  }
  
  .columns-row {
    .suggestion-column {
      order: 1;
      margin-bottom: 30px;
      border-radius: 10px;
      padding-right: 30px;
      overflow: hidden;

      .suggestion-body {
        max-height: 175px;
        overflow-y: scroll;
      }
    }  

    .suitcase-column {
      order: 2;
      padding-right: 30px;
      padding-bottom: 20px;

      .card-body {
        max-height: 225px;
        overflow-y: scroll;
      }
    }
  }

  .item-actions {
    display: flex;
    align-items: center;
  }
  
  .weather-panel-wrapper {
    display: none;
  }
}

